monticore-generator/src/test/resources/cocos/invalid/A4058/A4058b.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4058;

grammar A4058b {

  symbol A = "Hello" name:Name*;
  
}
